Atualizacao SecurityConfiguration